--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,19 +1,13 @@
 workflows:
-  ios-unity-workflow:
-    name: iOS Unity Build
+  ios-xcode:
+    name: iOS Xcode Build
     environment:
-      groups:
-        - ios_credentials # chứa APP_STORE_CONNECT_PRIVATE_KEY, CERT, PROFILE...
-      xcode: 16.4
-      unity: 2022.3.18f1
+      xcode: 16.4   # hoặc latest
     scripts:
-      - name: Activate Unity License
+      - name: Build .ipa from Xcode project
         script: |
-          unity-editor -logFile -quit -batchmode -serial ${UNITY_SERIAL} -username ${UNITY_EMAIL} -password ${UNITY_PASSWORD}
-      - name: Build Unity iOS Project
-        script: |
-          unity-editor -batchmode -nographics -quit -projectPath . -executeMethod BuildScript.BuildiOS
-      - name: Build IPA from Xcode
-        script: |
-          xcodebuild -workspace ios/Unity-iPhone.xcworkspace -scheme Unity-iPhone -sdk iphoneos -configuration Release archive -archivePath $CM_BUILD_DIR/build/Unity.xcarchive
-          xcodebuild -exportArchive -archivePath $CM_BUILD_DIR/build/Unity.xcarchive -exportOptionsPlist exportOptions.plist -exportPath $CM_BUILD_DIR/build
+          xcode-project build-ipa \
+            --workspace "Unity-iPhone.xcworkspace" \
+            --scheme "Unity-iPhone"
+    artifacts:
+      - build/ios/ipa/*.ipa
