--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,13 +1,21 @@
 workflows:
-  ios-xcode:
-    name: iOS Xcode Build
+  unity-ios:
+    name: Unity iOS Build
+    max_build_duration: 60
     environment:
-      xcode: 16.4   # hoặc latest
+      xcode: latest
+      vars:
+        XCODE_PROJECT: "Unity-iPhone.xcodeproj"
+        XCODE_SCHEME: "Unity-iPhone"
     scripts:
-      - name: Build .ipa from Xcode project
+      - name: Build ipa
         script: |
           xcode-project build-ipa \
-            --workspace "Unity-iPhone.xcworkspace" \
-            --scheme "Unity-iPhone"
+            --project "$XCODE_PROJECT" \
+            --scheme "$XCODE_SCHEME"
     artifacts:
       - build/ios/ipa/*.ipa
+    publishing:
+      email:
+        recipients:
+          - "youremail@example.com"
