--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,7 +1,6 @@
 workflows:
   unity-ios:
     name: Unity iOS Build
-    max_build_duration: 60
     environment:
       xcode: latest
       vars:
@@ -12,10 +11,7 @@ workflows:
         script: |
           xcode-project build-ipa \
             --project "$XCODE_PROJECT" \
-            --scheme "$XCODE_SCHEME"
+            --scheme "$XCODE_SCHEME" \
+            --export-options-plist "export_options.plist"
     artifacts:
       - build/ios/ipa/*.ipa
-    publishing:
-      email:
-        recipients:
-          - "youremail@example.com"
